--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,20 @@
-[project]
+[tool.poetry]
 name = "test-data-hackathon"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = []
+package-mode = false
+
+[tool.poetry.dependencies]
+python = "~3.11.13"
+fastapi = "^0.116.1"
+uvicorn = "^0.35.0"
+sqlalchemy = { extras = ["asyncio"], version = "^2.0.43" }
+asyncpg = "^0.30.0"
+pydantic = "^2.11.7"
+pydantic-settings = "^2.10.1"
+redis = "^6.4.0"
+faker = "^37.6.0"
+httpx = "^0.28.1"
+psycopg2-binary = "^2.9.10"
+greenlet = "^3.2.4"
